fix/style: resolve z-index issue
Resolve tooltip styling z-index issue

--- a/src/app/sass/loader.scss
+++ b/src/app/sass/loader.scss
@@ -9,7 +9,7 @@
     color: rgba(255, 255, 255, 0.8);
   }
   border-radius: 10px;
-  z-index: 99;
+  z-index: 9999;
   .full-loader-b {
     display: table;
     width: 100%;
